syntax = "proto3";

package rcserver;

import "distscore.proto";
import "recommend.proto";

option go_package = "github.com/a-agmon/rcserver/proto";

service RcService {
    rpc Recommend(stream RecommendRequest) returns (stream RecommendResponse);
    rpc RecommendByMany (RecommendManyRequest) returns (RecommendResponse);
}