syntax = "proto3";

package rcserver;

option go_package = "github.com/a-agmon/rcserver/proto";

message RecommendRequest{
    string content = 1;
}

message RecommendResponse{
    string content = 1;
}

message RecommendManyRequest{
    repeated string content = 1;
}

message RecommendManyResponse{
    repeated string content = 1;
}




